<?xml version="1.0"?>
<package format="3">
  <name>position_velocity</name>
  <version>0.0.1</version>
  <description>Package for PTZ camera calibration using AprilTags.</description>

  <maintainer email="sharifpial225@gmail.com">Sharif15</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>pyyaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
